grammar.ebnf
newLines        <- ("\n")*
program         <- newLines declaration* EOF;
primary         <-
                NUMBER |
                STRING |
                "false"|
                "true" |
                "null" |
                "(" expression ")" |
                compoundVar |
                funExpr |
                table;

(* STATEMENTS *)
declaration     <- functionDecl newLines
                | varDecl newLines
                | statement newLines;
functionDecl    <- ("function" | "\") compoundVar function;
function        <- ("(" parameters newLines ")")? statement;
parameters      <- newLines IDENTIFIER newLines ( "," newLines IDENTIFIER )*;
varDecl         <- "var" IDENTIFIER "=" newLines expression newLines ";" newLines;
statement       <- newLines
                (
                    exprStmt |
                    forStmt |
                    ifStmt |
                    returnStmt |
                    whileStmt |
                    block
                ) newLines;
returnStmt      <- "return" expression? ";";
exprStmt        <- expression ";";
forStmt         <- "for" "("( varDecl | exprStmt | ";" )
                            expression ";"
                            expression? ")" statement;
ifStmt          <- "if" "(" expression ")" statement ( "else" statement )?;
whileStmt       <- "while" "(" expression ")" statement;
block           <- "{" newLines declaration* "}";

(* EXPRESSIONS *)
funExpr         <- ("function" | "\") function;
expression      <- assignment;
(* assignments are right-associative expressions; all return the new value *)
(* e.g.: j1 = j += 1  is equivalent to  j += 1; j1 = j *)
assignment      <- (
                        compoundVar
                        (
                            "="  newLines |
                            "+=" newLines |
                            "-=" newLines |
                            "*=" newLines |
                            "/=" newLines |
                            "++" newLines |    (* postfix increment: compoundVar++ returns new value *)
                            "--" newLines      (* postfix decrement: compoundVar-- returns new value *)
                        )
                            expression |
                            logic_or;
                    ) newLines
logic_or        <- logic_and ( "or"  logic_and)*;
logic_and       <- logic_xor ( "and" logic_xor)*;
logic_xor       <- equality  ( "xor" equality )*;
equality        <- comparison ( ( "!=" | "==" ) comparison )*;
comparison      <- addition ( ( ">" | ">=" | "<" | "<=" ) addition )*;
addition        <- multiplication ( ( "-" | "+" | "..") multiplication )*;
multiplication  <- unary ( ( "/" | "*" ) unary )*;
unary           <- ( "!" | "-" ) unary | prefixExpr;

(* PREFIX EXPR — primary with optional call/index/method suffixes *)
(* Unlike Lua, bare identifiers and parenthesized expressions are valid  *)
(* statements — the result is simply popped. Not easy to be this simple! *)
(* callTail loops: f(a)(b)(c) is a valid chained/compound call.          *)
(* Newlines between calls are insignificant: f(a)\n(b) parses as f(a)(b) *)
(* Use ";" to force a statement boundary when that is not the intent.     *)
prefixExpr          <- primary ( callTail | anonymousMethodCall )?;
callTail            <- arguments indexedAccess* sequentialCall* anonymousMethodCall?;
anonymousMethodCall <- methodAccess callTail;
(* sequentialCall handles the result-of-call being immediately indexed *)
sequentialCall      <- arguments indexedAccess*;
arguments           <- "(" newLines ( expression newLines ( "," newLines expression newLines )* )? ")";

(* ACCESS *)
compoundVar     <- IDENTIFIER indexedAccess* methodAccess;
indexedAccess   <- ( "[" expression "]" ) | ( "." IDENTIFIER );
methodAccess    <-  ( ":" IDENTIFIER )?;

(* TABLE - unified type for both keyed and positional data              *)
(* Mode is disambiguated by Peek2: if second token is ":" → table mode  *)
(* [:]                 empty table                                       *)
(* []                  empty list                                        *)
(* [key: val, ...]     table mode — keys: IDENTIFIER, NUMBER, or STRING  *)
(* [val, val, ...]     list mode  — values: any expression               *)
table      <- "[" ( ":" "]"                                    (* empty table *)
                  | "]"                                        (* empty list  *)
                  | newLines tableEntry ("," newLines tableEntry)* newLines "]"
                  | newLines listEntry  ("," newLines listEntry)*  newLines "]"
                  );
(* "-" in tableEntry: only valid for numeric keys (negates the key literal) *)
tableEntry <- ( IDENTIFIER ":" expression )
            | ( "-"? NUMBER ":" expression )
            | ( STRING ":" expression );
(* "-" in listEntry: only valid for numeric literals (negates the literal) *)
listEntry  <- "-"? NUMBER | expression;
